# Quince

./: .gitignore  App.cpp  App.hpp  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  Duration.cpp  Duration.hpp  GstPlayer.cpp  GstPlayer.hpp  README.md  Song.cpp  Song.hpp  SongItem.cpp  SongItem.hpp  actions.hxx  audio.cc  audio.hh  audio.hxx  decl.hxx  err.hpp  main.cpp  quince.cc  quince.hh  resources.qrc  types.hxx
audio/: Meta.cpp  Meta.hpp  TempSongInfo.hpp  decl.hxx  flac.cc  flac.hh  mp3.cc  mp3.hh  ogg.cc  ogg.hh
gui/: Playlist.cpp  Playlist.hpp  PlaylistStackWidget.cpp  PlaylistStackWidget.hpp  SeekPane.cpp  SeekPane.hpp  SliderPane.cpp  SliderPane.hpp  SongItem.cpp  SongItem.hpp  Table.cpp  Table.hpp  TableModel.cpp  TableModel.hpp  decl.hxx  playlist.hxx
io/: File.cpp  File.hpp  io.cc  io.hh  io.hxx
shared/: global_hotkeys.hpp  global_hotkeys_x11.cpp
